@@ -506,7 +506,6 @@ update_hook_callback()
 {
   gtk_date_sel_set_time (GTK_DATE_SEL (datesel), viewtime);
   gtk_widget_draw (datesel, NULL);
-      
   day_view_update ();
 }
 
